# LUT-2026-3.28-RJKP-Python_proj

./: .gitignore  README.md  README_HOMEWORK.md  launcher.py  main.py  pyproject.toml  test_utils.py
1/: main.py  test.py
10/: main.py  test.py
11/: main.py  test.py
12/: main.py  test.py
13/: main.py  test.py
14/: main.py  test.py
15/: main.py  test.py
16/: main.py  test.py
17/: main.py  test.py
18/: main.py  test.py
19/: main.py  test.py
2/: main.py  test.py
20/: main.py  test.py
21/: main.py  test.py  zen1.txt
22/: main.py  test.py
23/: main.py  test.py
24/: main.py  test.py
24/.matplotlib/: fontlist-v390.json
25/: main.py  test.py
26/: main.py  test.py
26/data/: xiyouji_utf8.txt
27/: main.py  test.py
27/data/: population_age_structure_2011_2024.txt
28/: main.py  test.py
29/: main.py  test.py
3/: main.py  test.py
30/: main.py  test.py
31/: main.py  test.py
32/: main.py  test.py
33/: main.py  test.py
34/: main.py  test.py
35/: main.py  test.py
4/: main.py  test.py
5/: main.py  test.py
6/: main.py  test.py
7/: main.py  test.py
8/: main.py  test.py
9/: main.py  test.py
docs/: INSTALL_PYTHON_UV.md
