[project]
name = "python-practice-exercises"
version = "0.1.0"
description = "Python practice tasks with a uv-managed launcher."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
full = [
    "jieba>=0.42.1",
    "matplotlib>=3.8.0",
    "networkx>=3.2.1",
    "numpy>=1.26.0",
    "openpyxl>=3.1.2",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.3",
]
