[project]
name = "python-homework-26-28"
version = "0.1.0"
description = "Homework tasks 26-28 with a uv-managed launcher."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
full = [
    "jieba>=0.42.1",
    "matplotlib>=3.8.0",
    "playwright>=1.58.0",
    "scikit-learn>=1.6.1",
    "wordcloud>=1.9.6",
]
